--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
     destination: /appdir
 hooks:
   ApplicationStop:
-    - location: appdir/stop.sh
+    - location: appdir/danielr-app/stop.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: appdir/start.sh
+    - location: appdir/danielr-app/start.sh
       timeout: 300
       runas: root
