--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,10 @@ files:
   - source: /
     destination: /appdir/
 hooks:
+ AfterInstall:
+    - location: scripts/permissions.sh
+      timeout: 300
+      runas: root
   ApplicationStop:
     - location: scripts/stop.sh
       timeout: 300
